<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutDeleteNoteContainer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="13.00dp"
    android:background="@color/colorPrimaryDark">

    <ImageView
        android:id="@+id/imageDeleteNote"
        android:layout_width="32.50dp"
        android:layout_height="32.50dp"
        android:layout_marginStart="@dimen/dimen_10"
        android:layout_marginTop="@dimen/dimen_10"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_delete"
        app:tint="@color/colorPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

    </ImageView>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_10"
        android:layout_marginEnd="@dimen/dimen_10"
        android:fontFamily="@font/work_sans"
        android:includeFontPadding="false"
        android:text="@string/delete"
        android:textColor="@color/colorPrimary"
        android:textSize="16.90sp"
        app:layout_constraintBottom_toBottomOf="@id/imageDeleteNote"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/imageDeleteNote"
        app:layout_constraintTop_toTopOf="@id/imageDeleteNote"
        >

    </TextView>

    <TextView
        android:id="@+id/textDeleteNoteMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_10"
        android:fontFamily="@font/work_sans"
        android:gravity="center_vertical"
        android:includeFontPadding="false"
        android:paddingStart="@dimen/dimen_10"
        android:paddingEnd="@dimen/dimen_10"
        android:text="@string/konfirmasi_hapus"
        android:textColor="@color/colorPrimary"
        android:textSize="16.90sp"
        app:layout_constraintTop_toBottomOf="@id/imageDeleteNote"
        tools:layout_editor_absoluteX="10dp">

    </TextView>

    <TextView
        android:id="@+id/textDeleteNote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_10"
        android:layout_marginEnd="@dimen/dimen_10"
        android:layout_marginBottom="@dimen/dimen_10"
        android:fontFamily="@font/work_sans"
        android:includeFontPadding="false"
        android:padding="@dimen/dimen_10"
        android:text="Hapus Note"
        android:textAllCaps="true"
        android:textColor="@color/delete"
        android:textSize="16.90sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textDeleteNoteMessage">

    </TextView>

    <TextView
        android:id="@+id/textCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_10"
        android:layout_marginEnd="@dimen/dimen_10"
        android:layout_marginBottom="@dimen/dimen_10"
        android:fontFamily="@font/work_sans"
        android:includeFontPadding="false"
        android:padding="@dimen/dimen_10"
        android:text="@string/cancel"
        android:textAllCaps="true"
        android:textColor="@color/colorPrimary"
        android:textSize="16.90sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/textDeleteNote"
        app:layout_constraintTop_toBottomOf="@id/textDeleteNoteMessage"
        >

    </TextView>


</androidx.constraintlayout.widget.ConstraintLayout>