<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:id="@+id/notification_fragment"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.notification.PushNotificationFragment"
    xmlns:app="http://schemas.android.com/apk/res-auto">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <DatePicker
            android:id="@+id/datePicker"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:datePickerMode="spinner"
            android:calendarViewShown="false"
            android:layout_gravity="center"
            android:scaleY="0.7"
            android:scaleX="0.7"
            android:layout_marginLeft="-30dp"
            android:layout_marginRight="-30dp"
            />
        <TimePicker
            android:id="@+id/timePicker"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:timePickerMode="spinner"
            android:layout_gravity="center"
            android:scaleY="0.7"
            android:scaleX="0.7"
            android:layout_marginLeft="-30dp"
            android:layout_marginRight="-30dp"/>
    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="20dp"
        android:layout_marginTop="50dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
       >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/titleET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title"
            app:hintTextColor="@color/hint_color"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="20dp"
        android:layout_marginTop="20dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/messageET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/message"
            app:hintTextColor="@color/hint_color"
            />

    </com.google.android.material.textfield.TextInputLayout>
    <Button
        android:id="@+id/submitButton"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:backgroundTint="@color/black"
        android:text="@string/schedule_notification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</LinearLayout>
